# trellis

./: .gitignore  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 165pp610184nnl1znimdk46gbkwh0644-source  1h4r9mwxpgrf0wimmsg4jzcidmsph6nv-source  73jd5krdaw6r94zwfra7bi6qxw4lr0dp-source  cvm43cbd7i1hrv602v6jbw6x3qhhhmab-source  fcn96v07qxk4y2a0cspj0lhilsasnxrf-source  vp1fnrcfspchqmp4w9g3hmw4wyfjy1aq-source
src/: calculation.rs  controller.rs  kv.rs  lib.rs  prelude.rs  problem.rs  result.rs  state.rs  staten.rs
src/plotters/: mod.rs
src/runner/: builder.rs  killswitch.rs  mod.rs
src/state/: mod.rs  status.rs
src/watchers/: file.rs  mod.rs  plot.rs  slog.rs  tracing.rs
src/writers/: mod.rs
tests/: mod.rs
