[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
csv = "1.3.0"
ctrlc = { version = "3", optional = true }
fs-err = "2"
hifitime = "3"
ndarray = "0.15.6"
plotly = { version = "0.8.4", features = ["plotly_ndarray", "ndarray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = { version = "2", optional = true }
slog-async = { version = "2", optional = true }
slog-term = { version = "2", optional = true }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["sync"], optional = true }
tracing = "0.1.40"

[features]
default = ["tokio", "ctrlc", "slog"]
tokio = ["dep:tokio"]
ctrlc = ["dep:ctrlc"]
slog = ["dep:slog", "dep:slog-async", "dep:slog-term"]
