[package]
name = "trellis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1", optional = true }
csv = { version = "1.3.0", optional = true }
ctrlc = { version = "3", optional = true }
fs-err = { version = "2", optional = true }
hifitime = "3.9.0"
ndarray = { version = "0.15.6", optional = true }
num-traits = "0.2.19"
plotly = { version = "0.8.4", features = [
    "plotly_ndarray",
    "ndarray",
], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tempfile = { version = "3", optional = true }
thiserror = "1"
# tokio = { version = "1", features = ["sync"], optional = true }
tokio-util = { version = "0.7.12", optional = true }
tracing = "0.1.40"

[features]
# default = ["tokio", "ctrlc", "plotting", "writing"]
default = ["plotting", "writing"]
tokio = ["dep:tokio-util"]
ctrlc = ["dep:ctrlc"]
plotting = ["dep:plotly", "dep:ndarray"]
writing = [
    "dep:tempfile",
    "dep:serde_json",
    "dep:bincode",
    "dep:fs-err",
    "dep:csv",
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.4"
tokio-util = "0.7"
